--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Toastmasters Timer Pro</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <div id="timer">00:00</div>
@@ -34,4 +35,5 @@
 
     <script src="script.js" defer></script>
 </body>
+
 </html>
