--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="timer">00:00</div>
+    <div class="welcome-container">
+        <h1>Toastmasters Timer</h1>
+        <p>A simple, modern timer to help you track speech times. It provides clear visual cues and records a log of speakers and their times. Easy!</p>
+    </div>
 
+    <div id="timer">00:00</div>
     <div class="controls">
         <div class="input-group">
             <label>Green (s)
@@ -32,6 +36,7 @@
     <div class="controls button-group">
         <button id="startBtn">Start</button>
         <button id="stopBtn">Stop & Record</button>
+        <button id="cancelBtn">Cancel</button>
     </div>
     
     <div class="controls">
