update app name

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="info-container">
-        <h1>Presentation Timer</h1>
+        <h1>Timer</h1>
         <p>A simple, modern timer to help you track speech and presentation times. It provides clear visual cues and records a log of speakers for easy reference.</p>
     </div>
 
@@ -56,3 +56,4 @@
     <script src="script.js" defer></script>
 </body>
 </html>
+
