--- a/index.html
+++ b/index.html
@@ -30,14 +30,23 @@
 
     <div class="controls">
         <div class="input-group">
-            <label>Green (s)
-                <input type="number" id="greenTime" value="60">
+            <label>Green
+                <div class="time-input-pair">
+                    <input type="number" id="greenMin" value="1">
+                    <input type="number" id="greenSec" value="0">
+                </div>
             </label>
-            <label>Yellow (s)
-                <input type="number" id="yellowTime" value="30">
+            <label>Yellow
+                <div class="time-input-pair">
+                    <input type="number" id="yellowMin" value="1">
+                    <input type="number" id="yellowSec" value="30">
+                </div>
             </label>
-            <label>Red (s)
-                <input type="number" id="redTime" value="30">
+            <label>Red
+                <div class="time-input-pair">
+                    <input type="number" id="redMin" value="2">
+                    <input type="number" id="redSec" value="0">
+                </div>
             </label>
         </div>
         <div class="input-group full-width">
