improve timing setup

--- a/index.html
+++ b/index.html
@@ -31,21 +31,24 @@
     <div class="controls">
         <div class="input-group">
             <label>Green
-                <div class="time-input-pair">
-                    <input type="number" id="greenMin" value="1">
-                    <input type="number" id="greenSec" value="0">
+                <div class="time-input-group">
+                    <input type="number" id="greenMin" value="1" placeholder="min">
+                    <span>:</span>
+                    <input type="number" id="greenSec" value="0" placeholder="sec">
                 </div>
             </label>
             <label>Yellow
-                <div class="time-input-pair">
-                    <input type="number" id="yellowMin" value="1">
-                    <input type="number" id="yellowSec" value="30">
+                <div class="time-input-group">
+                    <input type="number" id="yellowMin" value="1" placeholder="min">
+                    <span>:</span>
+                    <input type="number" id="yellowSec" value="30" placeholder="sec">
                 </div>
             </label>
             <label>Red
-                <div class="time-input-pair">
-                    <input type="number" id="redMin" value="2">
-                    <input type="number" id="redSec" value="0">
+                <div class="time-input-group">
+                    <input type="number" id="redMin" value="2" placeholder="min">
+                    <span>:</span>
+                    <input type="number" id="redSec" value="0" placeholder="sec">
                 </div>
             </label>
         </div>
