update timer placeholder

--- a/index.html
+++ b/index.html
@@ -32,23 +32,23 @@
         <div class="input-group">
             <label>Green
                 <div class="time-input-group">
-                    <input type="number" id="greenHr" value="0" placeholder="00">
-                    <input type="number" id="greenMin" value="1" placeholder="00">
-                    <input type="number" id="greenSec" value="0" placeholder="00">
+                    <input type="number" id="greenHr" value="0" placeholder="00"> <span>hr</span>
+                    <input type="number" id="greenMin" value="1" placeholder="00"> <span>min</span>
+                    <input type="number" id="greenSec" value="0" placeholder="00"> <span>sec</span>
                 </div>
             </label>
             <label>Yellow
                 <div class="time-input-group">
-                    <input type="number" id="yellowHr" value="0" placeholder="00">
-                    <input type="number" id="yellowMin" value="1" placeholder="00">
-                    <input type="number" id="yellowSec" value="30" placeholder="00">
+                    <input type="number" id="yellowHr" value="0" placeholder="00"> <span>hr</span>
+                    <input type="number" id="yellowMin" value="1" placeholder="00"> <span>min</span>
+                    <input type="number" id="yellowSec" value="30" placeholder="00"> <span>sec</span>
                 </div>
             </label>
             <label>Red
                 <div class="time-input-group">
-                    <input type="number" id="redHr" value="0" placeholder="00">
-                    <input type="number" id="redMin" value="2" placeholder="00">
-                    <input type="number" id="redSec" value="0" placeholder="00">
+                    <input type="number" id="redHr" value="0" placeholder="00"> <span>hr</span>
+                    <input type="number" id="redMin" value="2" placeholder="00"> <span>min</span>
+                    <input type="number" id="redSec" value="0" placeholder="00"> <span>sec</span>
                 </div>
             </label>
         </div>
