update timer description

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="info-container">
         <h1>Timer</h1>
-        <p>A simple, modern timer to help you track speech and presentation times. It provides clear visual cues and records a log of speakers for easy reference.</p>
+        <p>A simple timer to help you track speech and presentation times. It provides clear visual cues and records a log of speakers for easy reference.</p>
     </div>
 
     <div id="timer">00 <i>hr</i> : 00 <i>min</i> : 00 <i>sec</i></div>
@@ -88,4 +88,5 @@
     <script src="script.js" defer></script>
 </body>
 </html>
+
 
