update helper description for clarity

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li><strong>Red:</strong> The maximum time has been exceeded. You should conclude your speech.</li>
             </ul>
             <hr>
-            <p>The list below keeps track of all speakers and their final times. You can remove an entry if a mistake was made or export the entire list to a PDF.</p>
+            <p>The recorded times track all speakers and their final times. You can remove an entry if a mistake was made or export the entire list to a PDF.</p>
         </div>
     </details>
 
